Fix the top shadow on small screen

--- a/_sass/index.sass
+++ b/_sass/index.sass
@@ -34,8 +34,6 @@ body
   max-width: 950px
   margin: 0 auto
   border: 1px solid lightgray
-  border-top: none
-  +box-shadow(0 0 20px 0 #dddddd)
   margin-bottom: 40px
 
 h1
@@ -76,8 +74,15 @@ a
 
     text-align: center
     border-bottom: 1px solid $secondary-a-3
+  .content
+    padding: 4px
 
 @media (min-width: 640px)
+  .wrapper
+    border-top: none
+    +box-shadow(0 0 20px 0 #dddddd)
+  .content
+    padding: 20px
   header
     h1
       font-size: 36px
@@ -120,7 +125,6 @@ nav
   margin-left: auto
   margin-right: auto
   max-width: 600px
-  padding: 20px
   display: inline-block
   iframe
     max-width: 100% !important
